--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 @charset "UTF-8";
 
+:root{
+    --fonte-padrão: arial, verdana, helvetica, sans-serif;
+    --fonte-destaque: "Rubik Mono One", monospace, sans-serif;
+}
+
+
 html, body{
-    padding: 0%;
-    margin: 0%;
     overflow-x: hidden;
     background-color: black;
 }
 
-header > img{
-    border-radius: 50%;
-    width: 10vw;
-    height: 20vh;
-    margin-left: 40vw;
+header h1{
+    color: white;
+    font-family: var(--fonte-destaque);
+    text-align: center;
+    text-shadow: 1px 1px 1px darkblue;
+}
+
+header h3{
+    color: white;
+    text-align: center;
 }
 
 nav{
@@ -34,9 +43,10 @@ nav > ul > li a{
 }
 
 nav a:hover{
-    color: blue;
-    border-radius: 5px;
-    transition-duration: 1.2s;
+    color: white;
+    border-radius: 15px;
+    transition-duration: 1.0s;
+    background-color: darkblue;
 }
 
 main img{
@@ -59,7 +69,6 @@ section{
 
 section h2{
     color: white;
-    background-color: #3C3D40;
 }
 section h2:hover{
     color: rgb(0, 102, 255);
@@ -93,4 +102,11 @@ section#img01{
 section#img02{
     background-image: url(imagens/entrada.jpg);
     background-size: cover;
+}
+
+footer {
+    background-color: rgba(105, 105, 105, 0.273);
+    padding: 20px;
+    text-align: center;
+    color: white;
 }
