--- a/estilos/style02.css
+++ b/estilos/style02.css
@@ -8,7 +8,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: darkgray;
+    background-color: black;
 }
 
 .menu {
@@ -18,7 +18,7 @@ body {
 }
 
 .item {
-    border: 2px solid black;
+    border: 2px solid darkred;
     padding: 20px;
     margin: 10px;
     width: 300px;
@@ -30,6 +30,7 @@ body {
 }
 
 h1{
+    color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-shadow: 1px 1px 1px darkblue;
     font-size: 5em;
@@ -41,12 +42,13 @@ h2{
 }
 
 p{
-    color: black;
+    color: white;
 }
 
 button{
     height: 35px;
-    background-color: black;
+    background-color:  darkred;
+    border: none;
 }
 
 button a{
