--- a/estilos/style.css
+++ b/estilos/style.css
@@ -113,8 +113,10 @@ footer {
     color: white;
 }
 
-@media screen and (min-width: 768px){
-    nav{ width: 100%;
-        height: 20vh;
+@media screen and (max-width: 768px){
+    html, body{
+        width: 100vw;
+        height: 100vh;
+        background-color: aqua;
     }
 }
