--- a/estilos/style.css
+++ b/estilos/style.css
@@ -113,10 +113,10 @@ footer {
     color: white;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (min-width: 320px) and (max-width: 768px){
     html, body{
         width: 100vw;
         height: 100vh;
-        background-color: aqua;
     }
+
 }
