--- a/estilos/style.css
+++ b/estilos/style.css
@@ -115,8 +115,17 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 768px){
     html, body{
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+        font-size: 89%;
     }
 
+    nav li{
+        white-space: nowrap;
+        text-align: center;
+    }
+
+    nav li.sobre{
+        display: none;
+    }
 }
